fix(Navbar) Dropdown width on IE11

--- a/packages/theme/src/theme/_navbar.scss
+++ b/packages/theme/src/theme/_navbar.scss
@@ -30,7 +30,6 @@
 		display: flex;
 
 		li {
-			display: flex;
 			align-items: center;
 		}
 	}
